// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChipsLayout /> should render with one chip 1`] = `
<ChipLayout
  handleMoreButton={[Function]}
  invertMoreButton={false}
  maxRows={2}
  moreLabel="more"
  pathname=""
>
  <div
    className="css-1hor112"
  >
    <div
      className="css-1ck9rgi"
    >
      <Chip
        editLabel={null}
        id="some-id"
        invert={false}
        onClick={[Function]}
        onRemove={[Function]}
        removable={true}
        removeLabel={null}
      >
        <div
          className="ui-shared__chip css-151hpn9"
          data-test-id="some-id"
        >
          <Button
            aria-label={null}
            className="css-39vnpz"
            disabled={false}
            onClick={[Function]}
            testId="removeFilter"
          >
            <button
              aria-label={null}
              className="css-39vnpz css-1rn65c0 common__button"
              data-test-id="removeFilter"
              disabled={false}
              onClick={[Function]}
            >
              <ResponsiveContainer
                appAlways={true}
                appOnly={false}
                breakpoint="<=xs"
                webAlways={false}
                webOnly={false}
              >
                <Cross
                  size={16}
                >
                  <Icon
                    className=""
                    color={null}
                    content="<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>"
                    size={16}
                    viewBox="0 0 24 24"
                  >
                    <svg
                      className="css-yys9hb  common__icon"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>",
                        }
                      }
                      style={
                        Object {
                          "fill": null,
                          "fontSize": 16,
                        }
                      }
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </Icon>
                </Cross>
              </ResponsiveContainer>
              <ResponsiveContainer
                appAlways={false}
                appOnly={false}
                breakpoint=">xs"
                webAlways={false}
                webOnly={true}
              />
            </button>
          </Button>
          <Button
            aria-label={null}
            className="css-hb5pev"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              aria-label={null}
              className="css-hb5pev css-1rn65c0 common__button"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              foo
            </button>
          </Button>
        </div>
      </Chip>
    </div>
    <div
      className="css-1sunnf0"
    >
      <RippleButton
        className="css-1lr4lw"
        disabled={false}
        fill={true}
        flat={false}
        onClick={[Function]}
        rippleClassName=""
        rippleSize={null}
        testId="Button"
        type="plain"
        wrapContent={true}
      >
        <Button
          className="css-1lr4lw ui-shared__ripple-button"
          disabled={false}
          flat={false}
          onClick={[Function]}
          testId="Button"
          type="plain"
          wrapContent={false}
        >
          <Button
            className="ui-shared__button css-1xxwysr css-1lr4lw ui-shared__ripple-button"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              className="ui-shared__button css-1xxwysr css-1lr4lw ui-shared__ripple-button css-1rn65c0 common__button"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              <Ripple
                className="css-1fscwua "
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple css-1fscwua "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={Object {}}
                    role={null}
                    string="more"
                    transform={null}
                  >
                    <span
                      className={null}
                      role={null}
                    >
                      more
                    </span>
                  </Translate>
                </div>
              </Ripple>
            </button>
          </Button>
        </Button>
      </RippleButton>
    </div>
  </div>
</ChipLayout>
`;

exports[`<ChipsLayout /> should render with two chips 1`] = `
<ChipLayout
  handleMoreButton={[Function]}
  invertMoreButton={false}
  maxRows={2}
  moreLabel="more"
  pathname=""
>
  <div
    className="css-1hor112"
  >
    <div
      className="css-1ck9rgi"
    >
      <Chip
        editLabel={null}
        id="some-id"
        invert={false}
        onClick={[Function]}
        onRemove={[Function]}
        removable={true}
        removeLabel={null}
      >
        <div
          className="ui-shared__chip css-151hpn9"
          data-test-id="some-id"
        >
          <Button
            aria-label={null}
            className="css-39vnpz"
            disabled={false}
            onClick={[Function]}
            testId="removeFilter"
          >
            <button
              aria-label={null}
              className="css-39vnpz css-1rn65c0 common__button"
              data-test-id="removeFilter"
              disabled={false}
              onClick={[Function]}
            >
              <ResponsiveContainer
                appAlways={true}
                appOnly={false}
                breakpoint="<=xs"
                webAlways={false}
                webOnly={false}
              >
                <Cross
                  size={16}
                >
                  <Icon
                    className=""
                    color={null}
                    content="<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>"
                    size={16}
                    viewBox="0 0 24 24"
                  >
                    <svg
                      className="css-yys9hb  common__icon"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>",
                        }
                      }
                      style={
                        Object {
                          "fill": null,
                          "fontSize": 16,
                        }
                      }
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </Icon>
                </Cross>
              </ResponsiveContainer>
              <ResponsiveContainer
                appAlways={false}
                appOnly={false}
                breakpoint=">xs"
                webAlways={false}
                webOnly={true}
              />
            </button>
          </Button>
          <Button
            aria-label={null}
            className="css-hb5pev"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              aria-label={null}
              className="css-hb5pev css-1rn65c0 common__button"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              foo
            </button>
          </Button>
        </div>
      </Chip>
      <Chip
        editLabel={null}
        id="some-other-id"
        invert={false}
        onClick={[Function]}
        onRemove={[Function]}
        removable={true}
        removeLabel={null}
      >
        <div
          className="ui-shared__chip css-151hpn9"
          data-test-id="some-other-id"
        >
          <Button
            aria-label={null}
            className="css-39vnpz"
            disabled={false}
            onClick={[Function]}
            testId="removeFilter"
          >
            <button
              aria-label={null}
              className="css-39vnpz css-1rn65c0 common__button"
              data-test-id="removeFilter"
              disabled={false}
              onClick={[Function]}
            >
              <ResponsiveContainer
                appAlways={true}
                appOnly={false}
                breakpoint="<=xs"
                webAlways={false}
                webOnly={false}
              >
                <Cross
                  size={16}
                >
                  <Icon
                    className=""
                    color={null}
                    content="<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>"
                    size={16}
                    viewBox="0 0 24 24"
                  >
                    <svg
                      className="css-yys9hb  common__icon"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>",
                        }
                      }
                      style={
                        Object {
                          "fill": null,
                          "fontSize": 16,
                        }
                      }
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </Icon>
                </Cross>
              </ResponsiveContainer>
              <ResponsiveContainer
                appAlways={false}
                appOnly={false}
                breakpoint=">xs"
                webAlways={false}
                webOnly={true}
              />
            </button>
          </Button>
          <Button
            aria-label={null}
            className="css-hb5pev"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              aria-label={null}
              className="css-hb5pev css-1rn65c0 common__button"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              bar
            </button>
          </Button>
        </div>
      </Chip>
    </div>
    <div
      className="css-1sunnf0"
    >
      <RippleButton
        className="css-1lr4lw"
        disabled={false}
        fill={true}
        flat={false}
        onClick={[Function]}
        rippleClassName=""
        rippleSize={null}
        testId="Button"
        type="plain"
        wrapContent={true}
      >
        <Button
          className="css-1lr4lw ui-shared__ripple-button"
          disabled={false}
          flat={false}
          onClick={[Function]}
          testId="Button"
          type="plain"
          wrapContent={false}
        >
          <Button
            className="ui-shared__button css-1xxwysr css-1lr4lw ui-shared__ripple-button"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              className="ui-shared__button css-1xxwysr css-1lr4lw ui-shared__ripple-button css-1rn65c0 common__button"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              <Ripple
                className="css-1fscwua "
                color="#000"
                disabled={false}
                fill={true}
                onClick={[Function]}
                onComplete={[Function]}
                overflow={true}
                size={null}
              >
                <div
                  className="ui-shared__ripple css-1fscwua "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={null}
                >
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={Object {}}
                    role={null}
                    string="more"
                    transform={null}
                  >
                    <span
                      className={null}
                      role={null}
                    >
                      more
                    </span>
                  </Translate>
                </div>
              </Ripple>
            </button>
          </Button>
        </Button>
      </RippleButton>
    </div>
  </div>
</ChipLayout>
`;
